added the logo in the centre

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
-</head>
-<body style="background-color: white;">
+    <style>
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            background-color: white;
+        }
 
+        p {
+            font-size: 4vw;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body style="display: flex; align-items: center; justify-content: center;">
+    <div style="text-align: center;">
+        <img width="256" height="256" src="src/henry.png" />
+        <p>Add this site to your home screen</p>
+    </div>
 </body>
+
 </html>
